[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapfs-agent-mysql"
version = "0.1.9"
description = "MySQL-backed storage and ingest agent for SnapFS."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Ryan Galloway", email = "ryan@rsg.io"}
]

dependencies = [
  "aiohttp>=3.9.0",
  "cryptography>=46.0.3",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.0",
  "aiomysql>=0.2.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/snapfsio/snapfs-agent-mysql"
Source   = "https://github.com/snapfsio/snapfs-agent-mysql"
Issues   = "https://github.com/snapfsio/snapfs-agent-mysql/issues"

[project.scripts]
snapfs-agent-mysql = "snapfs_agent_mysql.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
